<!--
  ~ Copyright 2016, 2017 IBM Corp.
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">serverlessfollowupappappidappid</string>
    <string name="hintText"><b>Hint:</b> Replace this screen with content that is available before a user is asked to login</string>
    <string name="mainAppID">App <b>ID</b></string>
    <string name="guest">Continue as guest</string>
    <string name="login">Login</string>
    <string name="choice">What would you like to eat?</string>
    <string name="get_gifts">Login, earn points and \nget gifts!</string>
    <string name="new_bonus_points">Thanks for joining! You just earned %1$s bonus points to get you started :)</string>
    <string name="bonus_points">You have %1$s points, go get an ice cream!</string>
    <string name="test_that_everything_is_working">Test that everything is working and customize the UI from the console.</string>
    <string name="view_token">View Token</string>
    <string name="greet">Hi</string>
    <string name="notice">Note:</string>
    <string name="description">Description</string>
    <string name="selected_icon">selected icon</string>
    <string name="welcome_to_your_working_app_id_sample">Welcome to your App ID sample app</string>
    <string name="login_to_get_a_gift">Login to get a gift</string>
    <string name="progressive_auth_notice">"A guest user logged-in for the first time. \nApp ID assigned this user’s identity to his anonymous profile, so his previous selections are saved. The anonymous token previously used to access this profile is now invalid."</string>
    <string name="switch_to_identified_notice">"A user started to use the app anonymously, made some selections, and then logged in. \nSince he had logged in in the past, the app switches over to his existing identified profile in place of his anonymous profile."</string>
    <string name="logged_in_new_notice">"An identified user logged in for the first time. A new Profile was created on App ID. \nNow when he logs in with the same credentials from any device or web client, the app will show his same profile and selections."</string>
    <string name="logged_in_again_notice">"A known identified user logged in again. His Profile is fetched from App ID.</string>
    <string name="new_guest_notice">"A guest user started using the app. \nApp ID created a new anonymous profile, where the user’s selections can be stored. Note that this anonymous profile is only available from this device."</string>
    <string name="returning_guest_notice">"A guest user returned. \nThe app uses his existing anonymous profile, so his previous selections are shown. Note that this anonymous user profile is only available from this device."</string>
    <string name="login_back_notice">"An identified user returned to the app with the same identity. \nThe app accesses his identified profile and the previous selections that he made."</string>
    <string name="login_back_and_change_login_notice">"The user signed back into the device with a different identity (e.g. was with Facebook, now with Google). The profile related to the identity he currenlty logged in with is now shown."</string>
    <string name="facebook_app_id">YOUR_APP_ID_HERE</string>
</resources>
