<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2016, 2017 IBM Corp.
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorBackground"
        android:orientation="vertical"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center_vertical"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/mainAppID"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/welcome_to_your_working_app_id_sample"
                android:textAlignment="center"
                android:textSize="24sp" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="120dp"
                android:layout_marginRight="120dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorButton"
                android:hapticFeedbackEnabled="false"
                android:onClick="onLoginClick"
                android:text="@string/login"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/anonymousButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="120dp"
                android:layout_marginRight="120dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorButton"
                android:hapticFeedbackEnabled="false"
                android:onClick="onAnonymousClick"
                android:text="@string/guest"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:background="@android:color/white"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:paddingBottom="30dp"
                android:src="@drawable/hint" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/hintText"
                android:textAlignment="viewStart"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
