<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2016, 2017 IBM Corp.
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_after_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorBackground"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/giftLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorButton"
            android:clickable="true"
            android:onClick="onGiftClick">

            <TextView
                android:id="@+id/textViewGift"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="7dp"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="7dp"
                android:text="@string/login_to_get_a_gift"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewGiftImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="7dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="7dp"
                android:fontFamily="sans-serif-condensed"
                android:text=">"
                android:textColor="@android:color/white"
                android:textSize="30sp" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/userLayout"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/giftLayout"
            android:weightSum="10">

            <LinearLayout
                android:id="@+id/profileLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="3">

                <ImageView
                    android:id="@+id/profilePic"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="20dp"
                    app:srcCompat="@mipmap/ic_anon" />

                <LinearLayout
                    android:layout_width="332dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/userName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Mr User"
                        android:textAlignment="gravity"
                        android:textColor="@color/colorText"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/yourFavorite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/choice"
                        android:textAlignment="gravity"
                        android:textColor="@color/colorText"
                        android:textSize="15sp" />
                </LinearLayout>

                <ListView
                    android:id="@+id/listviewFood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="40dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="40dp"
                    android:background="@android:color/white" />
            </LinearLayout>

            <ScrollView
                android:id="@+id/noticeLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:layout_gravity="bottom">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:gravity="bottom"
                    android:orientation="vertical"
                    android:scrollbars="vertical">

                    <Button
                        android:id="@+id/viewTokenButton"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="25dp"
                        android:layout_weight="0.8"
                        android:background="@color/colorButton"
                        android:onClick="onTokenViewClick"
                        android:padding="3dp"
                        android:text="@string/view_token"
                        android:textColor="@android:color/white"
                        android:textScaleX="0.8"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/note"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="40dp"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/notice"
                        android:textAlignment="viewStart"
                        android:textSize="18sp" />
                </LinearLayout>
            </ScrollView>

        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
